YML file changed

--- a/module/geo/gcc.yml
+++ b/module/geo/gcc.yml
@@ -2,15 +2,15 @@ compiler:
   path:  x86_64-w64-mingw32-gcc
   source_path: 
     - './code/'
-    - 'C:/autonomous-car/infrastructure/ut_framework/test_code/L2_Drivers/'
-    - 'C:/SJSU_Dev/projects/my_project/L3_Utils/'
-    - 'C:/SJSU_Dev/projects/my_project/generated_can/'
-    - 'C:/autonomous-car/infrastructure/ut_framework/test_code/L0_LowLevel/'
-    - 'C:/autonomous-car/module/geo/geo_project/L5_Application/'
-    - 'C:/autonomous-car/module/geo/code/compass.h/'
-    - 'C:/autonomous-car/module/geo/code/gps.h/'
-    - 'C:/autonomous-car/module/geo/tests/'
-    - 'C:/autonomous-car/shared_code/wrappers/'
+    - '../../../infrastructure/ut_framework/test_code/L2_Drivers/'
+    - '../../../../SJSU_Dev/projects/my_project/L3_Utils/'
+    - '../../../../SJSU_Dev/projects/my_project/generated_can/'
+    - '../../../infrastructure/ut_framework/test_code/L0_LowLevel/'
+    - '../geo_project/L5_Application/'
+    - '../code/compass.h/'
+    - '../code/gps.h/'
+    - '../tests/'
+    - '../../../shared_code/wrappers/'
   unit_tests_path: &unit_tests_path 'tests/'
   build_path:      &build_path 'ut_build/'
   options:
@@ -32,15 +32,16 @@ compiler:
       - './ut_build/mocks/'
       - './code_permanent_mocks/'
       # Source code under test
-      - './code/'
-      - 'C:/autonomous-car/infrastructure/ut_framework/test_code/L2_Drivers/'
-      - 'C:/SJSU_Dev/projects/my_project/L3_Utils/'
-      - 'C:/SJSU_Dev/projects/my_project/generated_can'
-      - 'C:/autonomous-car/infrastructure/ut_framework/test_code/L0_LowLevel/'
-      - 'C:/autonomous-car/module/geo/geo_project/L5_Application/'
-      - 'C:/autonomous-car/module/geo/code/'
-      - 'C:/autonomous-car/module/geo/tests/'
-      - 'C:/autonomous-car/shared_code/wrappers/'
+    - './code/'
+    - '../../../infrastructure/ut_framework/test_code/L2_Drivers/'
+    - '../../../../SJSU_Dev/projects/my_project/L3_Utils/'
+    - '../../../../SJSU_Dev/projects/my_project/generated_can/'
+    - '../../../infrastructure/ut_framework/test_code/L0_LowLevel/'
+    - '../geo_project/L5_Application/'
+    - '../code/compass.h/'
+    - '../code/gps.h/'
+    - '../tests/'
+    - '../../../shared_code/wrappers/'
   defines:
     prefix: '-D'
     items:
