--- a/module/bridge/gcc.yml
+++ b/module/bridge/gcc.yml
@@ -24,6 +24,8 @@ compiler:
       - './code_permanent_mocks/'
       # Source code under test
       - './code/'
+      - '../../infrastructure/ut_framework/test_code/L2_Drivers/'
+      - 'Z:/CMPE243/SJSU_Dev/projects/bridge_project/generated_can/'
       - *unit_tests_path
   defines:
     prefix: '-D'
